# myopengl

./: .gitignore  CMakeLists.txt  README.md
includes/learnopengl/: model_animation.h
resources/objects/cow/: cow.dae
resources/objects/mixamo/Idle/: Idle.dae
resources/objects/mixamo/Punch Combo/: Punch Combo.dae
resources/objects/mixamo/Run/: Run.dae
resources/objects/mixamo/Side Kick/: Side Kick.dae
resources/objects/mixamo/Walking/: Walking.dae
resources/objects/mixamo/granny/: Sporty Granny.dae
resources/objects/plane/: plane.dae
src/3_waviez/: gameObject.cpp  gameObject.h  main.cpp  shader.fs
src/assignment2_3D_kinetic_sculpture_and_animation/: main.cpp  shader.fs  shader.vs  sphere.cpp  sphere.hpp
src/assignment3_simple_3d_game/: 1.model_loading.vs  CollectibleManager.cpp  CollectibleManager.hpp  Ground.cpp  Ground.hpp  main.cpp
src/assignment4_character_animation_control/: skeletal_animation.cpp
